[Fixes PLANET-1685] Adjust cover cards for legibility

--- a/assets/scss/common/_covers.scss
+++ b/assets/scss/common/_covers.scss
@@ -79,9 +79,9 @@
   padding: 32px 15px 60px;
   margin-bottom: 16px;
   position: relative;
-  box-shadow: 0 0 10px rgba(0,0,0,.35);
+  box-shadow: 0 0 10px rgba(0, 0, 0, .35);
   background-size: cover;
-  background-position: center;
+  background-position: top;
   color: $grey-80;
 
   @include medium-and-up {
@@ -107,7 +107,7 @@
   }
 
   &:hover {
-    @include background-before-opacity(linear-gradient(180deg, rgba(51, 51, 51, 0.6), rgba(255, 256, 256, 0.9), rgba(255, 255, 255, 0.9)), .55);
+    @include background-before-opacity(linear-gradient(180deg, rgba(51, 51, 51, 0.6), rgba(250, 247, 236, 0.9), rgba(255, 255, 255, 0.8)), 1);
     box-shadow: 0 0 10px transparentize($black, .5);
 
     p {
@@ -184,7 +184,8 @@
   display: inline-block;
   margin-bottom: 8px;
   text-decoration: none;
-  text-shadow: 0.5px 0.5px 1px $black;
+  text-shadow: 1.5px 1.5px 1.5px $black;
+  font-weight: 800;
 
   &:hover {
     color: $yellow;
